--- a/git.html
+++ b/git.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>First Git Repository</h1>
+    <p>Assalamualikum, my name is Syed Raisul Islam</p>
+    <p>I'm trying to learn about Git</p>
 </body>
 </html>
